logs/offboard_pkg/build.make.366.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Init_lead_points_line(XmlRpc::XmlRpcValue&, Eigen::Vector3d&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:328:30: error: ‘DEG_TO_RAD’ was not declared in this scope
  328 |         yaw = data_list[3] * DEG_TO_RAD;
      |                              ^~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
